use quotes for title and description

--- a/tools/plop/template/category.hbs
+++ b/tools/plop/template/category.hbs
@@ -1,9 +1,9 @@
 ---
 type: category
-title: {{title}}
+title: "{{title}}"
 lang: {{lang}}
 {{#if description}}
-description: {{description}}
+description: "{{description}}"
 {{/if}}
 {{#if slug}}
 slug: {{slug}}
