--- a/tools/plop/template/post.hbs
+++ b/tools/plop/template/post.hbs
@@ -1,9 +1,9 @@
 ---
 type: post
 lang: {{lang}}
-title: {{title}}
+title: "{{title}}"
 {{#if description}}
-description: {{description}}
+description: "{{description}}"
 {{/if}}
 authors:
 {{#each authors}}
