--- a/tools/plop/template/post.hbs
+++ b/tools/plop/template/post.hbs
@@ -9,7 +9,9 @@ authors:
 {{#each authors}}
   - {{this}}
 {{/each}}
+{{#if date}}
 date: {{date}}
+{{/if}}
 {{#if location}}
 location: {{location}}
 {{/if}}
