migrated to typescript

--- a/tools/common/markdown/template/post.njk
+++ b/tools/common/markdown/template/post.njk
@@ -55,6 +55,9 @@ slug: {{ slug }}
 image:
   desktop: {{ image.desktop }}
 {% endif %}
+{% if license %}
+license: {{ license }}
+{% endif %}
 ---
 {% if content %}
 
