--- a/tools/common/markdown/template/post.njk
+++ b/tools/common/markdown/template/post.njk
@@ -25,8 +25,8 @@ duration: "{{ duration }}"
 {% if video %}
 video: "{{ video }}"
 {% endif %}
-{% if draft %}
-draft: true
+{% if status %}
+status: {{ status }}
 {% endif %}
 {% if slug %}
 slug: {{ slug }}
